apply plugin: 'com.android.library'

android {
  compileSdkVersion 21
  buildToolsVersion "21.1.2"

  compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_7
    targetCompatibility JavaVersion.VERSION_1_7
  }

  defaultConfig {
    minSdkVersion 14
    targetSdkVersion 21
    versionName project.VERSION_NAME
    versionCode Integer.parseInt(project.VERSION_CODE)
    consumerProguardFiles 'consumer-proguard-rules.pro'
  }
}

apply plugin: 'android-unit-test'

androidUnitTest {
  testTasks {
    all {
      jvmArgs '-noverify'
      jvmArgs '-XX:MaxPermSize=256m'
    }
  }
}

repositories {
  mavenLocal()
}

dependencies {
  testCompile('junit:junit:4.12') {
    exclude module: 'hamcrest-core'
  }
  testCompile 'org.easytesting:fest-assert-core:2.0M10'
  testCompile 'org.robolectric:robolectric:2.4'
  testCompile 'org.mockito:mockito-all:1.9.5'
  testCompile 'com.google.android:android:4.1.1.4'
  testCompile 'com.getbase.android.schema:library:0.6'

  compile 'com.google.guava:guava:16.0'
  compile 'com.android.support:support-annotations:19.1.0'
  compile 'org.chalup.thneed:thneed:0.5'
  compile 'com.getbase.android.db:library:0.10.1'
  compile 'org.chalup.microorm:microorm:0.5'
  compile 'com.getbase.android.forger:forger:0.1'
  compile 'com.android.support:support-v4:21.0.0'
  compile 'com.getbase.android.schema:library:0.7'
}

apply from: './gradle-mvn-push.gradle'
